--- a/sass/_susy.sass
+++ b/sass/_susy.sass
@@ -31,6 +31,8 @@ $columns:  12
 $susy:  (columns: 12, gutters: 1/4, math: fluid, output: float, gutter-position: inside, global-box-sizing: border-box, use-custom: (rem: true))
 
 $shorthand: 12 1/4 fluid float inside
+	
+
 
 *, *:after, *:before
 	+border-box-sizing
@@ -46,19 +48,65 @@ $shorthand: 12 1/4 fluid float inside
 	display: block
 	width: 100%
 
+// Class Hidden & Visible
+$sizes: -xs -sm -md -lg
+.hidden-xxs
+	display: none
+
+.visible-xxs-block
+	display: block
+	
+.visible-xxs-flex
+	display: flex
+
+.visible-xxs-inline
+	display: inline
+	
+.visible-xxs-inherit
+	display: inherit
+
+.visible-xxs-inline-block
+	+inline-block
+	
+.visible-xxs-table
+	display: table
+@each $size in $sizes
+	.hidden#{$size}
+		display: block
+	
+	.visible#{$size}-block
+		display: none
+
+	.visible#{$size}-flex
+		display: none
+
+	.visible#{$size}-inline
+		display: none
+
+	.visible#{$size}-inherit
+		display: none
+
+	.visible#{$size}-inline-block
+		display: none
+
+	.visible#{$size}-table
+		display: none
+
+// Grid
+
 @for $i from 1 through $columns
 	.col-xs-#{$i}, .col-sm-#{$i}, .col-md-#{$i}, .col-lg-#{$i}
 		+span($columns of $columns)
 		+clearfix
 
 @for $i from 1 through $columns
-	.pull-#{$i}
+	.pull-xxs-#{$i}
 		+pull($i of $columns)
-	.pre-#{$i}
+	.pre-xxs-#{$i}
 		+pre($i of $columns)
-	.post-#{$i}
+	.post-xxs-#{$i}
 		+post($i of $columns)
-	.col-#{$i}
+	.col-xxs-#{$i}
 		+span($i of $columns)
 
 
@@ -67,6 +115,45 @@ $shorthand: 12 1/4 fluid float inside
 @media screen and (min-width: $screen-xs-min) and (max-width: $screen-xs-max)
 	.container
 		+container(95%)
+		
+	// Class Hidden & Visible
+	.hidden-xs
+		display: none
+
+	.visible-xs-block
+		display: block
+
+	.visible-xs-flex
+		display: flex
+
+	.visible-xs-inline
+		display: inline
+
+	.visible-xs-inherit
+		display: inherit
+
+	.visible-xs-inline-block
+		+inline-block
+
+	.visible-xs-table
+		display: table
+	
+	$sizes: -xxs -sm -md -lg
+	@each $size in $sizes
+		.hidden#{$size}
+			display: block
+		.visible#{$size}-block
+			display: none
+		.visible#{$size}-flex
+			display: none
+		.visible#{$size}-inline
+			display: none
+		.visible#{$size}-inherit
+			display: none
+		.visible#{$size}-inline-block
+			display: none
+		.visible#{$size}-table
+			display: none
 
 	@for $i from 1 through $columns
 		.pull-#{$i}
@@ -93,6 +180,45 @@ $shorthand: 12 1/4 fluid float inside
 @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
 	.container
 		+container(720px)
+
+	// Class Hidden & Visible
+	.hidden-sm
+		display: none
+
+	.visible-sm-block
+		display: block
+
+	.visible-sm-flex
+		display: flex
+
+	.visible-sm-inline
+		display: inline
+
+	.visible-sm-inherit
+		display: inherit
+
+	.visible-sm-inline-block
+		+inline-block
+
+	.visible-sm-table
+		display: table
+	
+	$sizes: -xxs -xs -md -lg
+	@each $size in $sizes
+		.hidden#{$size}
+			display: block
+		.visible#{$size}-block
+			display: none
+		.visible#{$size}-flex
+			display: none
+		.visible#{$size}-inline
+			display: none
+		.visible#{$size}-inherit
+			display: none
+		.visible#{$size}-inline-block
+			display: none
+		.visible#{$size}-table
+			display: none
 
 	@for $i from 1 through $columns
 		.pull-#{$i}
@@ -133,6 +259,45 @@ $shorthand: 12 1/4 fluid float inside
 @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max)
 	.container
 		+container(960px)
+	
+	// Class Hidden & Visible
+	.hidden-md
+		display: none
+
+	.visible-md-block
+		display: block
+
+	.visible-md-flex
+		display: flex
+
+	.visible-md-inline
+		display: inline
+
+	.visible-md-inherit
+		display: inherit
+
+	.visible-md-inline-block
+		+inline-block
+
+	.visible-md-table
+		display: table
+	
+	$sizes: -xxs -xs -sm -lg
+	@each $size in $sizes
+		.hidden#{$size}
+			display: block
+		.visible#{$size}-block
+			display: none
+		.visible#{$size}-flex
+			display: none
+		.visible#{$size}-inline
+			display: none
+		.visible#{$size}-inherit
+			display: none
+		.visible#{$size}-inline-block
+			display: none
+		.visible#{$size}-table
+			display: none
 
 	@for $i from 1 through $columns
 		.pull-#{$i}
@@ -179,6 +344,45 @@ $shorthand: 12 1/4 fluid float inside
 @media screen and (min-width: $screen-lg-min)
 	.container
 		+container(1140px)
+
+	// Class Hidden & Visible
+	.hidden-lg
+		display: none
+
+	.visible-lg-block
+		display: block
+
+	.visible-lg-flex
+		display: flex
+
+	.visible-lg-inline
+		display: inline
+
+	.visible-lg-inherit
+		display: inherit
+
+	.visible-lg-inline-block
+		+inline-block
+
+	.visible-lg-table
+		display: table
+	
+	$sizes: -xxs -xs -sm -md
+	@each $size in $sizes
+		.hidden#{$size}
+			display: block
+		.visible#{$size}-block
+			display: none
+		.visible#{$size}-flex
+			display: none
+		.visible#{$size}-inline
+			display: none
+		.visible#{$size}-inherit
+			display: none
+		.visible#{$size}-inline-block
+			display: none
+		.visible#{$size}-table
+			display: none
 
 	@for $i from 1 through $columns
 		.pull-#{$i}
