--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 .hidden-xxs {
   display: none; }
 
-.visible-xxs-block {
+.visible-xxs, .visible-xxs-block {
   display: block; }
 
 .visible-xxs-flex {
@@ -48,7 +48,7 @@
 .hidden-xs {
   display: block; }
 
-.visible-xs-block {
+.visible-xs, .visible-xs-block {
   display: none; }
 
 .visible-xs-flex {
@@ -69,7 +69,7 @@
 .hidden-sm {
   display: block; }
 
-.visible-sm-block {
+.visible-sm, .visible-sm-block {
   display: none; }
 
 .visible-sm-flex {
@@ -90,7 +90,7 @@
 .hidden-md {
   display: block; }
 
-.visible-md-block {
+.visible-md, .visible-md-block {
   display: none; }
 
 .visible-md-flex {
@@ -111,7 +111,7 @@
 .hidden-lg {
   display: block; }
 
-.visible-lg-block {
+.visible-lg, .visible-lg-block {
   display: none; }
 
 .visible-lg-flex {
@@ -418,7 +418,7 @@
   .hidden-xs {
     display: none; }
 
-  .visible-xs-block {
+  .visible-xs, .visible-xs-block {
     display: block; }
 
   .visible-xs-flex {
@@ -443,7 +443,7 @@
   .hidden-xxs {
     display: block; }
 
-  .visible-xxs-block {
+  .visible-xxs, .visible-xxs-block {
     display: none; }
 
   .visible-xxs-flex {
@@ -464,7 +464,7 @@
   .hidden-sm {
     display: block; }
 
-  .visible-sm-block {
+  .visible-sm, .visible-sm-block {
     display: none; }
 
   .visible-sm-flex {
@@ -485,7 +485,7 @@
   .hidden-md {
     display: block; }
 
-  .visible-md-block {
+  .visible-md, .visible-md-block {
     display: none; }
 
   .visible-md-flex {
@@ -506,7 +506,7 @@
   .hidden-lg {
     display: block; }
 
-  .visible-lg-block {
+  .visible-lg, .visible-lg-block {
     display: none; }
 
   .visible-lg-flex {
@@ -860,7 +860,7 @@
   .hidden-sm {
     display: none; }
 
-  .visible-sm-block {
+  .visible-sm, .visible-sm-block {
     display: block; }
 
   .visible-sm-flex {
@@ -885,7 +885,7 @@
   .hidden-xxs {
     display: block; }
 
-  .visible-xxs-block {
+  .visible-xxs, .visible-xxs-block {
     display: none; }
 
   .visible-xxs-flex {
@@ -906,7 +906,7 @@
   .hidden-xs {
     display: block; }
 
-  .visible-xs-block {
+  .visible-xs, .visible-xs-block {
     display: none; }
 
   .visible-xs-flex {
@@ -927,7 +927,7 @@
   .hidden-md {
     display: block; }
 
-  .visible-md-block {
+  .visible-md, .visible-md-block {
     display: none; }
 
   .visible-md-flex {
@@ -948,7 +948,7 @@
   .hidden-lg {
     display: block; }
 
-  .visible-lg-block {
+  .visible-lg, .visible-lg-block {
     display: none; }
 
   .visible-lg-flex {
@@ -1518,7 +1518,7 @@
   .hidden-md {
     display: none; }
 
-  .visible-md-block {
+  .visible-md, .visible-md-block {
     display: block; }
 
   .visible-md-flex {
@@ -1543,7 +1543,7 @@
   .hidden-xxs {
     display: block; }
 
-  .visible-xxs-block {
+  .visible-xxs, .visible-xxs-block {
     display: none; }
 
   .visible-xxs-flex {
@@ -1564,7 +1564,7 @@
   .hidden-xs {
     display: block; }
 
-  .visible-xs-block {
+  .visible-xs, .visible-xs-block {
     display: none; }
 
   .visible-xs-flex {
@@ -1585,7 +1585,7 @@
   .hidden-sm {
     display: block; }
 
-  .visible-sm-block {
+  .visible-sm, .visible-sm-block {
     display: none; }
 
   .visible-sm-flex {
@@ -1606,7 +1606,7 @@
   .hidden-lg {
     display: block; }
 
-  .visible-lg-block {
+  .visible-lg, .visible-lg-block {
     display: none; }
 
   .visible-lg-flex {
@@ -2356,7 +2356,7 @@
   .hidden-lg {
     display: none; }
 
-  .visible-lg-block {
+  .visible-lg, .visible-lg-block {
     display: block; }
 
   .visible-lg-flex {
@@ -2381,7 +2381,7 @@
   .hidden-xxs {
     display: block; }
 
-  .visible-xxs-block {
+  .visible-xxs, .visible-xxs-block {
     display: none; }
 
   .visible-xxs-flex {
@@ -2402,7 +2402,7 @@
   .hidden-xs {
     display: block; }
 
-  .visible-xs-block {
+  .visible-xs, .visible-xs-block {
     display: none; }
 
   .visible-xs-flex {
@@ -2423,7 +2423,7 @@
   .hidden-sm {
     display: block; }
 
-  .visible-sm-block {
+  .visible-sm, .visible-sm-block {
     display: none; }
 
   .visible-sm-flex {
@@ -2444,7 +2444,7 @@
   .hidden-md {
     display: block; }
 
-  .visible-md-block {
+  .visible-md, .visible-md-block {
     display: none; }
 
   .visible-md-flex {
@@ -3427,34 +3427,39 @@ section.content h3 {
 
 section.content {
   position: relative;
-  z-index: 20;
+  z-index: 40;
   background: #efefef;
   color: #2c3e50;
   padding-bottom: 10px; }
   section.content:before {
     content: "";
     width: 100%;
-    height: 40px;
+    height: 100px;
     position: absolute;
     z-index: 10;
     background: #efefef;
-    -moz-transform: skew(0deg, -1.5deg);
-    -ms-transform: skew(0deg, -1.5deg);
-    -webkit-transform: skew(0deg, -1.5deg);
-    transform: skew(0deg, -1.5deg);
-    top: -20px; }
+    -moz-transform: skew(0deg, 2deg);
+    -ms-transform: skew(0deg, 2deg);
+    -webkit-transform: skew(0deg, 2deg);
+    transform: skew(0deg, 2deg);
+    top: -50px; }
   section.content:after {
     content: "";
     width: 100%;
-    height: 40px;
+    height: 100px;
     position: absolute;
     z-index: 10;
     background: #efefef;
-    -moz-transform: skew(0deg, -1.5deg);
-    -ms-transform: skew(0deg, -1.5deg);
-    -webkit-transform: skew(0deg, -1.5deg);
-    transform: skew(0deg, -1.5deg);
-    bottom: -20px; }
+    -moz-transform: skew(0deg, -2deg);
+    -ms-transform: skew(0deg, -2deg);
+    -webkit-transform: skew(0deg, -2deg);
+    transform: skew(0deg, -2deg);
+    bottom: -50px; }
+
+section.content.dark {
+  background: #333; }
+  section.content.dark:before, section.content.dark:after {
+    background: #333; }
 
 div.demo {
   -moz-box-shadow: inset 0 0 0px 1px #efefef, inset 0 0 0px 2px #dfb50d;
